2012-03-12 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: link to html version of sdccman removed;
	  Removed links to "Test Suite" and "CDB Format" documents,
	  now available on sdcc wiki:
	  http://sourceforge.net/apps/trac/sdcc/wiki/Proposed%20Test%20Suite%20Design
	  http://sourceforge.net/apps/trac/sdcc/wiki/CDB%20File%20Format
	* sdcctarbin.html, sdcc-install-nt.html, flatmode.txt,
	  cygwin_help.html: removed from svn, moved to sdcc wiki

2012-03-11 Borut Razem <borut.razem AT siol.net>

	* index.php, snap_header.php, links.php: removed Unicode BOM
	* links.php: fixed html errors

2012-03-09 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added info about included code from gcc test suite
	* left_menu.inc: link to Regression Tests temporary excluded
	  since regression tests analysis is not functional

2012-03-02 Borut Razem <borut.razem AT siol.net>

	* index.php: updated chapter "Who is SDCC?", ...

2012-03-01 Borut Razem <borut.razem AT siol.net>

	* links.php: "Links - LCD Stuff" is back, thanks to Dave Helton
	  who provided the backup copy of lcd directory

2012-02-28 Borut Razem <borut.razem AT siol.net>

	* links.php: applied requests from Wbdocs tracker:
	  #3486131: Broken links,
	  #3407481: Links - General,
	  #2986975: New Link for SDCC,
	  #2298395: KTechLab,
	  #1807915: KiCAD link

2012-02-26 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added GNU Binutils development team to external sources;
	  removed Conservative garbage collector for C & C++
	  from extrnal sources since it is not used by sdcc any more

2012-01-23 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  changed gbz80 status from unmaintained to experimental

2011-11-28 Borut Razem <borut.razem AT siol.net>

	* index.php: corrected PastNews, dedication to Dennis M. Ritchie

2011-11-27 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.1.0 release

2011-11-22 Borut Razem <borut.razem AT siol.net>
