@@ -1,0 +1,6 @@
+// MySQL database connection settings
+[db]
+host = "mysql-s"
+username = "s599rw"
+passwd = "riaProEs"
+dbname = "s599_regtests"
